--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,101 +1,68 @@
-$primary: rgb(0, 132, 255);
-$error: red;
-
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
-    background-color: $primary;
-    font-size: 16px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    padding: 0;
-    margin: 0;
-}
-
-.container {
-    max-width: 98vw;
-    margin: 0 auto;
-    padding: 1rem;
-    background-color: #fff;
-}
-
-.text-center {
-    text-align: center;
+    background-color: #435165;
 }
 
 .login {
-    .container
-
-{
-    max-width: 460px;
-    margin: 3rem auto;
-    padding: 2rem;
-    border: 1px solid #ddd;
-    border-radius: 0.25rem;
-    background-color: #fff;
+    width: 400px;
+    background-color: #ffffff;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    margin: 100px auto;
 }
 
-}
+    .login h1 {
+        text-align: center;
+        color: #5b6574;
+        font-size: 24px;
+        padding: 20px 0 20px 0;
+        border-bottom: 1px solid #dee0e4;
+    }
 
-.input {
-    appearance: none;
-    display: block;
-    width: 100%;
-    color: #333;
-    border: 1px solid rbg(180, 180, 180);
-    background-color: white;
-    padding: 1rem;
-    border-radius: 0.25rem;
-    &.input-error
+    .login form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-top: 20px;
+    }
 
-{
-    border: 1px solid $error;
-    &:focus
+        .login form label {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            background-color: #3274d6;
+            color: #ffffff;
+        }
 
-{
-    border: 1px solid $error;
-}
+        .login form input[type="password"], .login form input[type="text"] {
+            width: 310px;
+            height: 50px;
+            border: 1px solid #dee0e4;
+            margin-bottom: 20px;
+            padding: 0 15px;
+        }
 
-}
+        .login form input[type="submit"] {
+            width: 100%;
+            padding: 15px;
+            margin-top: 20px;
+            background-color: #3274d6;
+            border: 0;
+            cursor: pointer;
+            font-weight: bold;
+            color: #ffffff;
+            transition: background-color 0.2s;
+        }
 
-&:focus {
-    outline: none;
-    border: 1px solid $primary;
-    background-clip: padding-box;
-}
-
-}
-
-.error-message {
-    font-size: 0.85rem;
-    color: $error;
-}
-
-.button {
-    background-color: $primary;
-    padding: 1rem;
-    border: none;
-    color: #fff;
-    font-weight: bold;
-    display: block;
-    width: 100%;
-    text-align: center;
-    cursor: pointer;
-    font-size: 1rem;
-    &:hover
-
-{
-    filter: brightness(110%);
-}
-}
+            .login form input[type="submit"]:hover {
+                background-color: #2868c7;
+                transition: background-color 0.2s;
+            }
