--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,10 @@
 }
 
 body {
-    background-color: #435165;
+    background-image: url("../images/pexels.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-color: #e2eeff;
 }
 
 .login {
@@ -17,13 +20,6 @@ body {
     margin: 100px auto;
 }
 
-    .login h1 {
-        text-align: center;
-        color: #5b6574;
-        font-size: 24px;
-        padding: 20px 0 20px 0;
-        border-bottom: 1px solid #dee0e4;
-    }
 
     .login form {
         display: flex;
@@ -42,7 +38,8 @@ body {
             color: #ffffff;
         }
 
-        .login form input[type="password"], .login form input[type="text"] {
+        .login form input[type="password"],
+        .login form input[type="text"] {
             width: 310px;
             height: 50px;
             border: 1px solid #dee0e4;
@@ -66,3 +63,25 @@ body {
                 background-color: #2868c7;
                 transition: background-color 0.2s;
             }
+
+.row {
+    display: flex;
+}
+
+.logoImage {
+    flex: 40%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 10px;
+    vertical-align: middle;
+}
+
+.logo-text {
+    flex: 60%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-size: 40px;
+    font-weight: bold;
+}
