--- a/public/css/sidebars.css
+++ b/public/css/sidebars.css
@@ -57,3 +57,13 @@ body {
   .scrollarea {
     overflow-y: auto;
   }
+
+  .bi {
+    vertical-align: -.125em;
+    pointer-events: none;
+    fill: currentColor;
+  }
+
+  .sidebar { z-index: 1000; display: block; padding: 20px; overflow-x: hidden; overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */ background-color: #f5f5f5; border-right: 1px solid #eee;}
+
+  .sidebar { width: 180px; } @media (min-width: 768px) { .main { padding-right: 40px; padding-left: 220px; } }
