--- a/public/css/sidebars.css
+++ b/public/css/sidebars.css
@@ -67,3 +67,8 @@ body {
   .sidebar { z-index: 1000; display: block; padding: 20px; overflow-x: hidden; overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */ background-color: #f5f5f5; border-right: 1px solid #eee;}
 
   .sidebar { width: 180px; } @media (min-width: 1px) { .main { padding-right: 40px;} }
+
+  #logout
+  {
+    margin-left: 80px;
+  }
