--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -210,7 +210,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <th scope="row">1</th>
                             <td>Mark</td>
                             <td>Otto</td>
@@ -227,7 +227,20 @@
                             <td>Larry</td>
                             <td>the Bird</td>
                             <td>@twitter</td>
-                        </tr>
+                        </tr> -->
+
+                        <% rows.forEach(function(r) { %>
+                            <tr>
+                                <td><%= r.clientid %></td>
+                                <td><%= r.clientname %></td>
+                                <td>&nbsp</td>
+                                <td>0</td>
+                                <td><%= r.contactname %></td>
+                                <td><%= r.email %></td>
+                                <td><%= r.phone %></td>
+                                <td>View End Statements</td>
+                            </tr>
+                        <% }); %>
                     </tbody>
                 </table>
 
