changes to client.ejs: removed ../.. from href links

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -11,9 +11,9 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../public/css/sidebars.css" rel="stylesheet">
-    <link href="../../public/css/home.css" rel="stylesheet">
+    <link href="/public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/css/sidebars.css" rel="stylesheet">
+    <link href="/public/css/home.css" rel="stylesheet">
 
 </head>
 
@@ -95,7 +95,7 @@
                 <div class="position-fixed">
                     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark " style="width: 280px;">
                         <a class="navbar-brand" href="#">
-                            <img src="../../public/images/logo.png" alt="" width="70" height="70"
+                            <img src="/public/images/logo.png" alt="" width="70" height="70"
                                 class="d-inline-block align-text-top">
                             Bytetools
                         </a>
@@ -192,7 +192,7 @@
                             <button id="logout" class="btn btn-secondary" name="foo" value="Sign Out">Signout</button>
                             <!-- <input type="submit" value="LOGOUT"> -->
                         </form>
-                        
+
                     </div>
 
 
