Added newClient.ejs and functionality to create a new client

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clients</title>
+    <title>Invoice Management App | Clients</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -194,15 +194,6 @@
                         </form>
 
                     </div>
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
 
@@ -215,7 +206,8 @@
 
                 <div class="input-group">
                     <!-- Button for new Clients -->
-                    <form action="/newClient.hmtl">
+                    <!-- <form action="/newClient.html"> -->
+                    <form action="/newClient">
                         <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
                     </form>
 
