--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -179,7 +179,7 @@
 
                 <div class="formcontainer">
                     <!-- <form action="" target="_blank" method="post"> -->
-                    <form action="/newClient" target="_blank" method="post">
+                    <form action="/newClient" method="post">
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
@@ -236,22 +236,6 @@
 
                     </form>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
         </div>
     </div>
