new branch: convert newClient.html to ejs file; error, index unable to redirect to newClient page

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -179,7 +179,7 @@
 
                 <div class="formcontainer">
                     <!-- <form action="" target="_blank" method="post"> -->
-                    <form action="/newClient" method="post">
+                    <form class="" action="/newClient" method="post">
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
