--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Invoice Management App | theuicode.com</title> -->
-    <title>Invoice Management App | Create New Client</title>
+    <title>Invoice Management App | theuicode.com</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-          integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-          crossorigin="anonymous" />
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
@@ -167,6 +166,15 @@
                             <!-- <input type="submit" value="LOGOUT"> -->
                         </form>
                     </div>
+
+
+
+
+
+
+
+
+
                 </div>
             </div>
 
@@ -178,8 +186,7 @@
                 <h1 class="display-1">New Clients</h1>
 
                 <div class="formcontainer">
-                    <!-- <form action="" target="_blank" method="post"> -->
-                    <form class="" action="/newClient" method="post">
+                    <form action="" target="_blank" method="post">
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
@@ -211,7 +218,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
+                                <label for="inlineRadioOptions" class="form-label">Preffered Contact</label>
                                 <br>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions"
@@ -227,6 +234,17 @@
 
 
                             </div>
+
+                            <div class="row g-3 gx-5">
+                                <div class="col-md-12">
+                                    <h2>Billing Address</h2>
+                                    <textarea class="form-control" id="billingAdress" classname="Text1" cols="40"
+                                        rows="5"></textarea>
+                                    <br>
+                                </div>
+
+                            </div>
+
                             <div class="col-12" style="text-align: center;">
                                 <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
                             </div>
