--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -125,13 +125,16 @@
                                     Dashboard
                                 </a>
                             </li>
+
                             <li class="nav-item">
-                                <a href="#" class="nav-link text-white" aria-current="page">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle" />
-                                    </svg>
-                                    Clients
-                                </a>
+                                <form action="/clients" method = "GET">
+                                    <a href="#" class="nav-link text-white" aria-current="page">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#people-circle" />
+                                        </svg>
+                                        Clients
+                                    </a>
+                                </form>
                             </li>
                             <li>
                                 <a href="#" class="nav-link text-white">
@@ -166,19 +169,8 @@
                         </form>
                     </div>
 
-
-
-
-
-
-
-
-
                 </div>
             </div>
-
-
-
 
             <!-- Main contecnt section, will be different for all the pages -->
             <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
@@ -191,8 +183,6 @@
                             d="m9.97 4.88.953 3.811C10.159 8.878 9.14 9 8 9c-1.14 0-2.158-.122-2.923-.309L6.03 4.88C6.635 4.957 7.3 5 8 5s1.365-.043 1.97-.12zm-.245-.978L8.97.88C8.718-.13 7.282-.13 7.03.88L6.275 3.9C6.8 3.965 7.382 4 8 4c.618 0 1.2-.036 1.725-.098zm4.396 8.613a.5.5 0 0 1 .037.96l-6 2a.5.5 0 0 1-.316 0l-6-2a.5.5 0 0 1 .037-.96l2.391-.598.565-2.257c.862.212 1.964.339 3.165.339s2.303-.127 3.165-.339l.565 2.257 2.391.598z" />
                     </svg></i> In progress: Will display snapshot of the the
                     top clients and top invoices)</h2>
-
-
             </div>
         </div>
     </div>
