--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -127,8 +127,8 @@
                             </li>
 
                             <li class="nav-item">
-                                <form action="/clients" method = "GET">
-                                    <a href="#" class="nav-link text-white" aria-current="page">
+                                <form method = "GET">
+                                    <a href="/clients" class="nav-link text-white" aria-current="page">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#people-circle" />
                                         </svg>
@@ -136,6 +136,7 @@
                                     </a>
                                 </form>
                             </li>
+                            
                             <li>
                                 <a href="#" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
