--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -136,15 +136,16 @@
                                     </a>
                                 </form>
                             </li>
-                            
-                            <li>
-                                <a href="#" class="nav-link text-white">
+
+                            <li method = "GET">
+                                <a href="/viewinvoice" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
                                         <use xlink:href="#table" />
                                     </svg>
                                     Invoices
                                 </a>
                             </li>
+
                             <li>
                                 <a href="#" class="nav-link text-white">
                                     <svg class="bi me-2" width="16" height="16">
