--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -137,13 +137,15 @@
                                 </form>
                             </li>
 
-                            <li method = "GET">
-                                <a href="/viewinvoice" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#table" />
-                                    </svg>
-                                    Invoices
-                                </a>
+                            <li>
+                                <form method = "GET">
+                                    <a href="/viewinvoice" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#table" />
+                                        </svg>
+                                        Invoices
+                                    </a>
+                                </form>
                             </li>
 
                             <li>
