--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -139,7 +139,7 @@
 
                             <li>
                                 <form method = "GET">
-                                    <a href="/viewinvoice" class="nav-link text-white">
+                                    <a href="/invoicepage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#table" />
                                         </svg>
