--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -111,12 +111,15 @@
                                 </a>
                             </li> -->
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#speedometer2" />
-                                    </svg>
-                                    Dashboard
-                                </a>
+                                <form method = "GET">
+                                    <a href="/auth" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#speedometer2" />
+                                        </svg>
+                                        Dashboard
+                                    </a>
+                                </form>
+                               
                             </li>
                             <!-- <li>
                                 <a href="#" class="nav-link text-white">
