--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -111,8 +111,8 @@
                                 </a>
                             </li> -->
                             <li>
-                                <form method = "GET">
-                                    <a href="/auth" class="nav-link text-white">
+                                <form method = "POST">
+                                    <a href= "/auth" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#speedometer2" />
                                         </svg>
