--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -118,12 +118,14 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#speedometer2" />
-                                    </svg>
-                                    Dashboard
-                                </a>
+                                <form method = "POST">
+                                    <a href= "/auth" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#speedometer2" />
+                                        </svg>
+                                        Dashboard
+                                    </a>
+                                </form>
                             </li>
 
                             <li class="nav-item">
