--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -110,6 +110,25 @@
                                     Home
                                 </a>
                             </li> -->
+
+                            <!-- <li>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#table" />
+                                    </svg>
+                                    Orders
+                                </a>
+                            </li> -->
+                            
+                            <!-- <li>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#people-circle" />
+                                    </svg>
+                                    Customers
+                                </a>
+                            </li> -->
+                            
                             <li>
                                 <form method = "POST">
                                     <a href= "/auth" class="nav-link text-white">
@@ -119,56 +138,52 @@
                                         Dashboard
                                     </a>
                                 </form>
-                               
                             </li>
-                            <!-- <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#table" />
-                                    </svg>
-                                    Orders
-                                </a>
-                            </li> -->
+
                             <li class="nav-item">
-                                <a href="#" class="nav-link text-white" aria-current="page">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle" />
-                                    </svg>
-                                    Clients
-                                </a>
+                                <form method = "GET">
+                                    <a href="/clients" class="nav-link text-white" aria-current="page">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#people-circle" />
+                                        </svg>
+                                        Clients
+                                    </a>
+                                </form>
+                            </li>
+
+                            <li>
+                                <form method = "GET">
+                                    <a href="/invoicepage" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#table" />
+                                        </svg>
+                                        Invoices
+                                    </a>
+                                </form>
+                            </li>
+
+                            <li>
+                                <form method = "GET">
+                                    <a href="/productspage" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#grid" />
+                                        </svg>
+                                        Products
+                                    </a>
+                                </form>
+                                
                             </li>
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#table" />
-                                    </svg>
-                                    Invoices
-                                </a>
+                                <form method ="GET">
+                                    <a href="/paymentspage" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#collection" />
+                                        </svg>
+                                        Payments
+                                    </a>
+                                </form>
                             </li>
-                            <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#grid" />
-                                    </svg>
-                                    Products
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle" />
-                                    </svg>
-                                    Customers
-                                </a>
-                            </li> -->
-                            <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#collection" />
-                                    </svg>
-                                    Payments
-                                </a>
-                            </li>
+
                         </ul>
                         <hr>
                         <!-- <div class="dropdown">
