--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -32,7 +32,7 @@
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
             <input type="submit" value="Login">
-            <input type="submit" value="Register">
+            <button id="myButton" type="button">Register</button>
         </form>
     </div>
 </body>
