--- a/views/pages/productspage.ejs
+++ b/views/pages/productspage.ejs
@@ -118,12 +118,14 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#speedometer2" />
-                                    </svg>
-                                    Dashboard
-                                </a>
+                                <form method = "POST">
+                                    <a href= "/auth" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#speedometer2" />
+                                        </svg>
+                                        Dashboard
+                                    </a>
+                                </form>
                             </li>
 
                             <li class="nav-item">
@@ -149,22 +151,27 @@
                             </li>
 
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#grid" />
-                                    </svg>
-                                    Products
-                                </a>
+                                <form method = "GET">
+                                    <a href="/productspage" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#grid" />
+                                        </svg>
+                                        Products
+                                    </a>
+                                </form>
+                                
                             </li>
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#collection" />
-                                    </svg>
-                                    Payments
-                                </a>
+                                <form method ="GET">
+                                    <a href="/paymentspage" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#collection" />
+                                        </svg>
+                                        Payments
+                                    </a>
+                                </form>
                             </li>
-
+                            
                         </ul>
                         <hr>
                         <form action="/logout" method="post">
