--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -225,7 +225,7 @@
                 <div class="input-group">
                     <!-- Button for new Clients -->
                     <!-- <form action="/newClient.html"> -->
-                    <form action="/newClient">
+                    <form action="/newClient" method="GET">
                         <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
                     </form>
 
