--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -167,14 +167,6 @@
                         </form>
                     </div>
 
-
-
-
-
-
-
-
-
                 </div>
             </div>
 
@@ -245,11 +237,12 @@
 
                             </div>
 
-                            <div class="col-12" style="text-align: center;">
-                                <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
-                            </div>
-
-
+                            <form method = "POST" action = "/newClient">
+                                <div class="col-12" style="text-align: center;">
+                                    <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
+                                </div>
+                            </form>
+                            
                         </div>
 
                     </form>
