--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -31,8 +31,7 @@
                 <i class="fas fa-lock"></i>
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
-            <input type="submit" value="Login">
-            <a href="https://guarded-springs-56328.herokuapp.com/register">REGISTER</a>
+            <input type="submit" value="REGISTER">
         </form>
     </div>
 </body>
